<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="25dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_your_task" />

            <EditText
                android:id="@+id/et_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:autofillHints="@string/add_your_task_here"
                android:hint="@string/add_your_task_here"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_task"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:autofillHints="@string/enter_task_details"
                android:hint="@string/enter_task_details"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_details"
                android:text="@string/save"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="5dp"


                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>