<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Activity.DetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_det"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:padding="15dp">


            <TextView
                android:id="@+id/tv_title_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_details_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_det"
                android:text="@string/task_details"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_dateAdded_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_details_det"
                android:text="@string/date"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_edit_det"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ic_create_black_24dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_delete_det"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_delete_black_36dp"
                    tools:ignore="ButtonStyle" />

            </TableRow>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
