<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:paddingTop="5dp"
                android:text="@string/task_details"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_details"
                android:paddingTop="5dp"
                android:text="@string/date"
                android:textSize="12sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_date"
                android:paddingTop="5dp"
                android:text="Status: "
                android:textSize="12sp"/>

            <TableRow
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ic_create_black_24dp"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_delete_black_36dp"
                    tools:ignore="ButtonStyle" />


            </TableRow>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>